# DataPlaneML

./: NOTICE  README.md
HwFramework-IPSA/: .gitignore  CMakeLists.txt  README.md  main.cpp
HwFramework-IPSA/rP4-compiler/: README.md
HwFramework-IPSA/rP4-compiler/p4r/: p4_parser.h  p4r  p4r.cpp  pipeline_demo.rp4
HwFramework-IPSA/rP4-compiler/rp4c/: ipsa_level_manager.h  lex.l  lex.yy.c  rp4_compiler  rp4_expression.h  rp4c  yacc.cpp  yacc.hpp  yacc.y
HwFramework-IPSA/scripts/: merge_neuron_tables.py
HwFramework-IPSA/sw-src/: CMakeLists.txt
HwFramework-IPSA/sw-src/MlCompiler/: CMakeLists.txt  README.md  main.cpp
HwFramework-IPSA/sw-src/api/: controller_client.h  dataplane_server.h
HwFramework-IPSA/sw-src/api_pb/: controller_to_dataplane.grpc.pb.cc  controller_to_dataplane.grpc.pb.h  controller_to_dataplane.pb.cc  controller_to_dataplane.pb.h
HwFramework-IPSA/sw-src/controller/: ctrl_init_dataplane.cpp  ctrl_init_dataplane.h  ctrl_mod_table.h  router_r1_to_r3.json  router_r3_to_r1.json
HwFramework-IPSA/sw-src/controller/proto/: controller_to_dataplane.proto
HwFramework-IPSA/sw-src/dataplane/: CMakeLists.txt  backup  defs.h  executor.h  gateway.h  matcher_c.h  neuron_primitive.cpp  neuron_primitive.h  pipeline.h
HwFramework-IPSA/sw-src/examples/: classifier.p4  neuron_primitive.md
HwFramework-IPSA/sw-src/tables/: metadata_context.json  processor.json  sigmoid_table.json
HwFramework-IPSA/sw-src/util/: generate_packet.py
SwFramework/: .gitignore  README.md  requirements.txt
SwFramework/dataset/: Readme.md
SwFramework/src/: neuron_primitive_cost.py  run_datasets.py
